# FFmpegJupiter

./: README.md  build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: ffmpeg_utils.cpp  ffmpeg_wrapper.cpp
app/src/main/java/com/sunfusheng/ffmpeg/jupiter/: CommonItemView.kt  FFmpegWrapper.kt  MainActivity.java  MainActivity.kt  UriUtil.kt
app/src/main/java/com/sunfusheng/ffmpeg/jupiter/ffmpeg/: FFmpegUtils.java  FFmpegWrapper.java
app/src/main/res/drawable/: drawable_list_item_selector.xml
app/src/main/res/layout/: activity_main.xml  layout_common_item_view.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
